# helix

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/helix/base/: applet.h  application.h  plugin.h
include/helix/core/: factory.h  fsm.h  singleton.h  tuple.h
include/helix/gfx/: graphics_context.h
src/: CMakeLists.txt
src/helix/: CMakeLists.txt
src/helix/base/: CMakeLists.txt
src/helix/base/platform/: CMakeLists.txt
src/helix/base/platform/x11/: CMakeLists.txt  x11_application.cpp
